# tobio

./: .gitignore  README.md  pyproject.toml
app/backend/: Dockerfile  config.py  main.py  pyproject.toml
app/backend/core/: camera.py  events.py  model_registry.py  security.py
app/backend/routers/: health.py  video.py
app/backend/services/: action_classifier.py  ball_tracker.py  base_tracker.py  court_estimator.py  court_tracker.py  player_tracker.py  serve_recognizer.py
app/backend/utils/: __init__.py  cache.py  geometry.py  video.py
app/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
app/frontend/src/: App.tsx  api.ts  index.css  main.tsx  statistics.ts
app/frontend/src/components/: CameraSettings.tsx  ChatAgentService.tsx  CsvModal.tsx  Dashboard.tsx  EventViewer.tsx  Loading.tsx  Navbar.tsx  Sidebar.tsx  StatisticsPanel.tsx  SubSidebar.tsx  Toolbar.tsx  VideoPlayer.tsx  VolleyballCourt.tsx
app/frontend/src/components/ui/: Button.tsx  Input.tsx  PhysicsButton.tsx
app/frontend/src/fonts/: spotify-circular-ttf.css
app/frontend/src/styles/: csvmodal.css  dashboard.css  eventviewer.css  hero.css  navbar.css  shadcn-components.css  sidebar.css  statisticsPanel.css  subsidebar.css  toolbar.css  utilities.css  videoplayer.css
training/: 1_court_tracking.ipynb  2_ball_tracking.ipynb  4_serve_recognition.ipynb  5_action_classification.ipynb  6_hyperparameter_tuning.ipynb  utils.py
training/wandb/run-20260417_125448-cp3txzk9/files/: requirements.txt  wandb-metadata.json
